--- a/Vista/Nvoadmin.html
+++ b/Vista/Nvoadmin.html
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01" >
             <ul class="navbar-nav mr-auto " >
                 <li class="nav-item active">
-                    <a class="nav-link" href="vistaAdmin.html"><span class="sr-only; icon-home"></span> Mi cuenta</a>
+                    <a class="nav-link" href="vistaAdmin.php"><span class="sr-only; icon-home"></span> Mi cuenta</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Georreferencias.php">Sitios</a>
