--- a/Vista/informacion.html
+++ b/Vista/informacion.html
@@ -10,95 +10,75 @@
 </head>
 <body>
 <header>
-    <div class="contenedor">
-        <div class="encabezado">
-            <script languaje="JavaScript">
-                var mydate=new Date()
-                var year=mydate.getYear()
-                if (year < 1000)
-                    year+=1900
-                var day=mydate.getDay()
-                var month=mydate.getMonth()
-                var daym=mydate.getDate()
-                if (daym<10)
-                    daym="0"+daym
-                var dayarray=new Array("Domingo,","Lunes,","Martes,","Miércoles,","Jueves,","Viernes,","Sábado,")
-                var montharray=new Array("enero","febrero","marzo","abril","mayo","junio","julio","agosto","septiembre","octubre","noviembre","diciembre")
-                document.write("<font color='white' face='sans-serif' style='font-size:10pt; margin-top: 10px'>"+dayarray[day]+" "+daym+" de "+montharray[month]+" de "+year+"</font>")
-            </script>
-        </div>
-        <br>
-        <div id="marca">
-            <table style="margin-left: 10%">
-                <tr>
-                    <td >
-                        <img width="120px" height="150px" style="margin-right: 30px" src="../imagenes/logo2.png">
-                    </td>
-                    <td style="border-left: 1px solid white; border-right: 1px solid white;">
-                        <h3 >Sitios de Disposición Final de Residuos Sólidos Urbanos</h3>
-                        <h3>Estado de Veracruz</h3>
-                    </td>
-                    <td >
-                        <img width="160px" height="140px" style="margin-left: 30px" src="../imagenes/logouvcolor.png">
-                    </td>
-                </tr>
-            </table>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-2">
+                <img width="170px" height="130px"  src="../imagenes/logoUVNOMBRE.png">
+            </div>
+            <div class="col-lg-8">
+                <h3 style="text-align: center">Sitios de Disposición Final de Residuos Sólidos Urbanos</h3>
+                <h3 style="text-align: center; margin-top: -5px">del Estado de Veracruz</h3>
+            </div>
+            <div class="col-lg-2">
+                <img width="110px" height="140px" style="margin-right: 15%" src="../imagenes/logo2.png">
+            </div>
         </div>
     </div>
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="collapse navbar-collapse" id="navbarColor01" >
+                <ul class="navbar-nav mr-auto" >
+                    <li class="nav-item active">
+                        <a class="nav-link"  href="../index.php"><span class="sr-only; icon-home"></span> Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="informacion.html">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="QuienesSomos.html">Quiénes somos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download" aria-expanded="false">Consultas <span class="caret"></span></a>
+                        <div class="dropdown-menu" aria-labelledby="download">
+                            <!--<a class="dropdown-item" target="_blank" href="https://jsfiddle.net/bootswatch/jmg3gykg/">Por Estado</a>
+                            <div class="dropdown-divider"></div>-->
+                            <a class="dropdown-item"  href="consultas/ConsultaRegion.php">Por Región</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item"  href="consultas/ConsultaMunicipios.php">Por Municipio</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item"  href="consultas/ConsultaTipo.php">Por Tipo de sitio</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div style="margin-right: 40px;">
+                <script languaje="JavaScript">
+                    var mydate=new Date()
+                    var year=mydate.getYear()
+                    if (year < 1000)
+                        year+=1900
+                    var day=mydate.getDay()
+                    var month=mydate.getMonth()
+                    var daym=mydate.getDate()
+                    if (daym<10)
+                        daym="0"+daym
+                    var dayarray=new Array("Domingo,","Lunes,","Martes,","Miércoles,","Jueves,","Viernes,","Sábado,")
+                    var montharray=new Array("enero","febrero","marzo","abril","mayo","junio","julio","agosto","septiembre","octubre","noviembre","diciembre")
+                    document.write("<font color='white' face='sans-serif' style='font-size:10pt; margin-top: 10px'>"+dayarray[day]+" "+daym+" de "+montharray[month]+" de "+year+"</font>")
+                </script>
+            </div>
+            <a class="btn btn-success btn-sm" style="margin-right: 20px" href="login.html">Iniciar Sesión</a>
+            <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </nav>
+    </div>
 </header>
-<div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav-tabs">
-        <div class="collapse navbar-collapse" id="navbarColor01" >
-            <ul class="navbar-nav mr-auto " >
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.php"><span class="sr-only; icon-home"></span> Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Información</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="QuienesSomos.html">¿Quiénes somos?</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Contactos.html">Contactos</a>
-                </li>
-            </ul>
-        </div>
-        <a class="btn btn-success btn-sm" style="margin-right: 20px" href="login.html">Iniciar Sesión</a>
-        <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
-</div>
-<ul class="nav nav-tabs">
-    <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#SIG">Sistema de Información Geográfica</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#RSU">Residuos Sólidos Urbanos</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#SDF">Sitios de Disposición Final</a>
-    </li>
-</ul>
 <section>
     <article>
-        <h2 style="text-align: left">Sistema de Información Geográfica</h2>
-        <br>
-        <p>Se entiende por "Sistema de Información" al conjunto de información con herramientas informáticas, es decir, con programas informáticos o software. Si el objeto concreto de un sistema de información (información + software) es la obtención de datos relacionados con el espacio físico, entonces hablamos de un Sistema de Información Geográfica o SIG (GIS por su acrónimo inglés: Geographic Information Systems).</p>
-        <p>Es una herramienta que permite la organización, almacenamiento, manipulación, análisis y modelización de datos que están vinculados a la geografía del Estado de Veracruz, el cual se basa en la información que se genera en el quehacer diario del Ayuntamiento de Mérida, así como de diversas fuentes confiables que proporcionan referencias espaciales facilitando la incorporación de aspectos ambientales; y que permite a los usuarios hacer consultas interactivas, localizar sitios, ubicar zonas de riesgo, entre otras acciones.</p>
-        <p>Dado el dinamismo y la versatilidad de esta herramienta, su contenido es de carácter estrictamente informativo.</p>
-        <img width="65%" height="65%" style="alignment: center" src="../imagenes/sig2.jpg">
-        <br><br><br><br><br><br>
-        <a name="RSU"><h2 style="text-align: left">Residuos Sólidos Urbanos</h2></a>
-        <br>
-        <p>Los RSU son los generados en las casas habitación, que resultan de la eliminación de los materiales que utilizan en sus actividades domésticas, de los productos que consumen y de sus envases, embalajes o empaques; los residuos que provienen de cualquier otra actividad dentro de establecimientos o en la vía pública que genere residuos con características domiciliarias, y los resultantes de la limpieza de las vías y lugares públicos, siempre que no sean considerados por esta Ley como residuos de otra índole.</p>
-        <img width="65%" height="65%" src="../imagenes/RSU.jpeg">
-        <br><br><br><br><br><br>
-
         <a name="SDF"><h2 style="text-align: left">Sitios de Disposición Final</h2></a>
         <br>
-        <p>Un sitio de disposición final es el lugar donde se depositan los residuos sólidos urbanos y de manejo especial en forma definitiva (NOM-083, 2015). Es la última etapa del manejo integral de los RSU, por lo que al sitio de disposición final deberán de llegar solo los materiales que no tienen otras posibilidades de ser aprovechados en el reúso, reciclamiento y compostaje (Medina et al., 2005). En México los sitios de disposición final se clasifican en tres tipos: </p>
+        <p>Un sitio de disposición final es el lugar donde se depositan los residuos sólidos urbanos y de manejo especial en forma definitiva. Es la última etapa del manejo integral de los RSU, por lo que al sitio de disposición final deberán de llegar solo los materiales que no tienen otras posibilidades de ser aprovechados en el reúso, reciclamiento y compostaje. En México los sitios de disposición final se clasifican en tres tipos: </p>
         <table >
             <tr >
                 <td width="45%" ><p><b>El relleno sanitario:</b> Obra de infraestructura que involucra métodos y obras de ingeniería para la disposición final de los residuos sólidos urbanos y de manejo especial, con el fin de controlar, a través de la compactación e infraestructura adicional, los impactos ambientales.</p></td>
@@ -118,8 +98,13 @@
         </table>
 </article>
 </section>
-<footer>
-    <p style="text-align: center">SIG de Sitios de Disposición Final de RSU COPYRIGHT &copy 2019 | UNIVERSIDAD VERACRUZANA</p>
+<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+<script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://bootswatch.com/_assets/js/custom.js"></script>
+<footer >
+    <p style="text-align: center; color: #fff;">Contacto: Dra. Gloria Inés González López. Correo: giglzlzy@yahoo.com.mx</p>
+    <p style="color: #fff; text-align: center">SDF de RSU del Estado de Veracruz COPYRIGHT &copy 2019 | UNIVERSIDAD VERACRUZANA</p>
 </footer>
 </body>
 </html>
